summative.moria.Moria.scala.code
def trouverBiscuit(){
  setDirection(EST)
  while ((!estSurBiscuit)||(!estFaceMur)){
    avance()
  }
  prendBiscuit()
  retourne()
  while (!estSurBiscuit){
    avance()
  }
  recule()
}

def Sortir(){
  while (!trouverBiscuit()){
    
  }
}